# ascii_player

./: CMakeLists.txt  ascii_player.nix
cmake/Modules/: FindSDL2.cmake  FindSDL2_ttf.cmake  Findffmpeg.cmake
src/: main.cpp
